updated new deploy conf
using the instructions at https://www.npmjs.com/package/angular-cli-ghpages

--- a/angular.json
+++ b/angular.json
@@ -104,6 +104,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "buildTarget": "ghpages-exp1:build:production"
+          }
         }
       }
     }
